fixed all sections and changed skils to flex-direction column on smallest screens.

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body {
 
 #about .about-me-right,
 #about .about-me-left {
-    max-width: 300px;
+    max-width: 350px;
     width: 100%;
     height: 150px;
     border: none;
@@ -334,11 +334,6 @@ body {
 #skills .skills-list-row-1 .skill-item {
     font-weight: 700;
 }
-#skills .skill-cybersecurity,
-#skills .skill-technical-support {
-    font-weight: 700;
-    font-size: 2rem;
-}
 
 #skills .skill-cybersecurity, #skills .skill-technical-support {
   margin-bottom: .5rem;
@@ -402,6 +397,60 @@ body {
     background-position: top;
     background-repeat: no-repeat;
 }
+
+#projects .projects-row {
+    background-color: var(--emphasis-primary-bg-dark);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    box-sizing: border-box;
+    border: none;
+    border-radius: 0;
+    overflow: hidden;
+    width: 100%;
+    margin: 0;
+}
+
+#projects .projects-left,
+#projects .projects-right {
+    max-width: 464px;
+    width: 100%;
+    height: 150px;
+    border: none;
+    box-sizing: border-box;
+    background-clip: padding-box;
+    background-repeat: no-repeat;
+}
+
+#projects .projects-left {
+    background-image: url('assets/octavian-dan-craciun-b21Ty33CqVs-unsplash.jpg');
+    background-position: left center;
+    background-size: cover;
+}
+
+#projects .projects-right {
+    background-image: url('assets/octavian-dan-craciun-b21Ty33CqVs-unsplash.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+
+#projects .projects-header {
+    background: var(--base-color);
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    flex: 1 1 auto;
+    margin: 0 0 0 0;
+}
    
 #projects h2 {
     text-align: center;
@@ -417,6 +466,7 @@ body {
     padding: 0;
     margin: 0;
     align-items: center;
+    margin-top: 2rem;
 }
 #projects li {
     font-size: 1.75rem;
@@ -542,6 +592,20 @@ body {
   #about p {
     font-size: 1.5rem;
   }
+  #skills .skill-item,
+  #skills .skill-cybersecurity,
+  #skills .skill-technical-support {
+    font-size: 2rem;
+  }
+  #skills .skill-cybersecurity {
+    margin-left: 12vw;
+  }
+  #skills .skill-technical-support {
+    margin-right: 12vw;
+  }
+  #skills .skills-list-row-2 {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 768px) {
@@ -549,6 +613,27 @@ body {
      font-size: 2rem;
   }
   #about p {
+    font-size: 1.25rem;
+  }
+  #skills .skill-item,
+  #skills .skill-cybersecurity,
+  #skills .skill-technical-support {
+    font-size: 1.15rem;
+  }
+  #skills .skill-cybersecurity {
+    margin-left: 8vw;
+  }
+  #skills .skill-technical-support {
+    margin-right: 8vw;
+  }
+  #projects li {
+    font-size: 1.25rem;
+  }
+
+  #websites li {
+    font-size: 1.25rem;
+  }
+  #linkedin-btn button {
     font-size: 1.25rem;
   }
 }
@@ -562,6 +647,82 @@ body {
   #about p {
     font-size: 1rem;
   }
+  #skills .skill-item,
+  #skills .skill-cybersecurity,
+  #skills .skill-technical-support {
+    font-size: .7rem;
+  }
+  #skills .skill-cybersecurity,
+  #skills .skill-item .skill-cybersecurity {
+    padding-left: 0;
+    min-width: 120px;
+    text-align: left;
+    margin-left: 1rem;
+
+  }
+  #skills .skill-technical-support {
+    margin-right: 0;
+    min-width: 120px;
+    text-align: left;
+    margin-left: -.5rem;
+  }
+  #skills .skill-cybersecurity {
+    text-align: left;
+    margin-left: 1rem;
+  }
+  #skills .skills-list-row-2 {
+    justify-items: flex-start;
+  }
+  #navbar a {
+    font-size: .6rem;
+  }
+
+  #projects li {
+    font-size: .75rem;
+  }
+
+  #websites li {
+    font-size: .75rem;
+  }
+  #linkedin-btn button {
+    font-size: .75rem;
+  }
+  #footer p {
+    font-size: .75rem;
+  }
 }
 
+@media (max-width: 310px) {
+    #skills .skills-list-row-1,
+    #skills .skills-list-row-2 {
+      flex-direction: column;
+      justify-content: space-between;
+    }
 
+    #skills .skill-item,
+  #skills .skill-cybersecurity,
+  #skills .skill-technical-support {
+    text-align: center;
+    margin-left: 0;
+    padding-left: 0;
+  }
+  #skills .skill-item:first-child {
+    margin-left: 0;
+    padding-left: 0;
+  }
+  #skills .skills-list-row-2 {
+    margin-top: 0;
+  }
+  #skills .skill-cybersecurity {
+    margin-bottom: 0;
+  }
+ 
+  #skills .skill-item {
+    margin-bottom: 1.5rem;
+  }
+  
+  #skills .skill-technical-support {
+    margin-bottom: 2rem;
+  }
+
+}
